Prevent awkward text wrapping in footer.

--- a/css/main.css
+++ b/css/main.css
@@ -338,6 +338,10 @@ footer {
   margin: 0 -20px;
 }
 
+.no-wrap {
+  white-space: nowrap;
+}
+
 @media (max-width: 320px) {
   .navbar {
     text-align: center;
